<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="dp.schoolandroid.viewmodel.EditPasswordViewModel"/>
    </data>

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context=".view.ui.activity.EditPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tb_collected_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/colorWhite"
            android:textSize="17.7sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/old_password"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar" />

    <EditText
        android:id="@+id/oldPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35h"
        android:layout_marginTop="6dp"
        android:background="@drawable/et_background"
        android:hint="@string/starts"
        android:text="@={viewModel.oldPassword}"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dp15h"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_password"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordEditText" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35h"
        android:layout_marginTop="6dp"
        android:background="@drawable/et_background"
        android:hint="@string/must_have_8_character"
        android:inputType="textPassword"
        android:text="@={viewModel.newPassword}"
        android:paddingStart="@dimen/dp15h"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35h"
        android:layout_marginTop="6dp"
        android:background="@drawable/et_background"
        android:hint="@string/should_be_same_password"
        android:inputType="textPassword"
        android:text="@={viewModel.newPasswordConfirmation}"
        android:paddingStart="@dimen/dp15h"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="@dimen/dp120h"
        android:layout_height="@dimen/dp35h"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="71dp"
        android:background="@drawable/btn_rounded_assignment"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:onClick="sendToChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

</android.support.constraint.ConstraintLayout>
</layout>