<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="dp.schoolandroid.viewmodel.ResetPasswordActivityViewModel"/>
    </data>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activity.ResetPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp120w"
        android:layout_height="@dimen/dp100h"
        android:layout_marginTop="@dimen/dp42h"
        android:scaleType="centerInside"
        android:src="@drawable/img_colored_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp7h"
        android:layout_marginStart="@dimen/dp7h"
        android:layout_marginTop="@dimen/dp25h"
        android:lines="1"
        android:text="@string/title_reset_password"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/new_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#000"
        android:ems="10"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:text="@={viewModel.password}"
        android:textColor="#000"
        android:textColorHint="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/confirm_new_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#000"
        android:ems="10"
        android:hint="@string/hint_confirm_new_password"
        android:inputType="textPassword"
        android:text="@={viewModel.passwordConfirmation}"
        android:textColor="#000"
        android:textColorHint="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_editText" />

    <Button
        android:id="@+id/btn_confirm_reset_password"
        android:layout_width="@dimen/dp107w"
        android:layout_height="@dimen/dp32h"
        android:background="@drawable/btn_background_blue"
        android:onClick="confrimPassword"
        android:text="@string/confirm_login"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_new_password_editText" />

</android.support.constraint.ConstraintLayout>
</layout>